Added user_cars routes and functionality
