# controllers/userCar.js
@@ -2,7 +2,7 @@ const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res) => {
-  const result = await mongodb.getDb().db().collection('user').find();
+  const result = await mongodb.getDb().db().collection('user_cars').find();
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists);
@@ -10,8 +10,8 @@ const getAll = async (req, res) => {
 };
 
 const getSingle = async (req, res) => {
-  const userId = new ObjectId(req.params.id);
-  const result = await mongodb.getDb().db().collection('user').find({ _id: userId });
+  const user_cars = new ObjectId(req.params.id);
+  const result = await mongodb.getDb().db().collection('user_cars').find({ _id: user_cars });
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists[0]);
@@ -19,16 +19,12 @@ const getSingle = async (req, res) => {
 };
 
 const createUser = async (req, res) => {
-  const user = {
-    firstName: req.body.firstName,
-    middleName: req.body.middleName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday,
-    pet: req.body.pet,
+  const user_cars = {
+    make: req.body.make,
+    model: req.body.model,
+    mobility: req.body.mobility
   };
-  const response = await mongodb.getDb().db().collection('user').insertOne(user);
+  const response = await mongodb.getDb().db().collection('user_cars').insertOne(user_cars);
   if (response.acknowledged) {
     res.status(201).json(response);
   } else {
@@ -39,20 +35,16 @@ const createUser = async (req, res) => {
 const updateUser = async (req, res) => {
   const userId = new ObjectId(req.params.id);
   // be aware of updateOne if you only want to update specific fields
-  const user = {
-    firstName: req.body.firstName,
-    middleName: req.body.middleName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday,
-    pet: req.body.pet
+  const user_cars = {
+    make: req.body.make,
+    model: req.body.model,
+    mobility: req.body.mobility
   };
   const response = await mongodb
     .getDb()
     .db()
-    .collection('user')
-    .replaceOne({ _id: userId }, user);
+    .collection('user_cars')
+    .replaceOne({ _id: userId }, user_cars);
   console.log(response);
   if (response.modifiedCount > 0) {
     res.status(204).send();
@@ -63,7 +55,7 @@ const updateUser = async (req, res) => {
 
 const deleteUser = async (req, res) => {
   const userId = new ObjectId(req.params.id);
-  const response = await mongodb.getDb().db().collection('user').remove({ _id: userId }, true);
+  const response = await mongodb.getDb().db().collection('user_cars').remove({ _id: userId }, true);
   console.log(response);
   if (response.deletedCount > 0) {
     res.status(204).send();
