# routes/index.js
@@ -3,5 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/user', require('./user'));
+router.use('/user_cars', require('./user_cars'));
 
 module.exports = router;
